--- a/environment.yml
+++ b/environment.yml
@@ -2,135 +2,135 @@ name: aimlac
 channels:
   - defaults
 dependencies:
-  - anyio3.5.0
-  - appnope0.1.2
-  - argon2-cffi21.3.0
-  - argon2-cffi-bindings21.2.0
-  - asttokens2.0.5
-  - attrs22.1.0
-  - backcall0.2.0
-  - beautifulsoup44.11.1
-  - blas1.0
-  - bleach4.1.0
-  - bottleneck1.3.5
-  - brotli1.0.9
-  - brotli-bin1.0.9
-  - bzip21.0.8
-  - ca-certificates2023.01.10
-  - certifi2022.12.7
-  - cffi1.15.1
-  - comm0.1.2
-  - contourpy1.0.5
-  - cycler0.11.0
-  - debugpy1.5.1
-  - decorator5.1.1
-  - defusedxml0.7.1
-  - entrypoints0.4
-  - executing0.8.3
-  - flit-core3.8.0
-  - fonttools4.25.0
-  - freetype2.12.1
-  - giflib5.2.1
-  - icu68.1
-  - idna3.4
-  - ipykernel6.19.2
-  - ipython8.10.0
-  - ipython_genutils0.2.0
-  - jedi0.18.1
-  - jinja23.1.2
-  - jpeg9e
-  - jsonschema4.17.3
-  - jupyter_client7.4.9
-  - jupyter_core5.3.0
-  - jupyter_server1.23.4
-  - jupyterlab_pygments0.1.2
-  - kiwisolver1.4.4
-  - lcms22.12
-  - lerc3.0
-  - libbrotlicommon1.0.9
-  - libbrotlidec1.0.9
-  - libbrotlienc1.0.9
-  - libcxx14.0.6
-  - libdeflate1.17
-  - libffi3.4.2
-  - libgfortran5.0.0
-  - libgfortran511.3.0
-  - libiconv1.16
-  - libopenblas0.3.21
-  - libpng1.6.39
-  - libsodium1.0.18
-  - libtiff4.5.0
-  - libwebp1.2.4
-  - libwebp-base1.2.4
-  - libxml22.10.3
-  - libxslt1.1.37
-  - llvm-openmp14.0.6
-  - lxml4.9.2
-  - lz4-c1.9.4
-  - markupsafe2.1.1
-  - matplotlib3.7.1
-  - matplotlib-base3.7.1
-  - matplotlib-inline0.1.6
-  - mistune0.8.4
-  - munkres1.1.4
-  - nbclassic0.5.3
-  - nbclient0.5.13
-  - nbconvert6.5.4
-  - nbformat5.7.0
-  - ncurses6.4
-  - nest-asyncio1.5.6
-  - notebook6.5.3
-  - notebook-shim0.2.2
-  - numexpr2.8.4
-  - numpy1.23.5
-  - numpy-base1.23.5
-  - openssl1.1.1t
-  - packaging23.0
-  - pandas1.5.3
-  - pandocfilters1.5.0
-  - parso0.8.3
-  - pexpect4.8.0
-  - pickleshare0.7.5
-  - pillow9.4.0
-  - pip23.0.1
-  - platformdirs2.5.2
-  - prometheus_client0.14.1
-  - prompt-toolkit3.0.36
-  - psutil5.9.0
-  - ptyprocess0.7.0
-  - pure_eval0.2.2
-  - pycparser2.21
-  - pygments2.11.2
-  - pyparsing3.0.9
-  - pyrsistent0.18.0
-  - python3.10.10
-  - python-dateutil2.8.2
-  - python-fastjsonschema2.16.2
-  - pytz2022.7
-  - pyzmq23.2.0
-  - readline8.2
-  - send2trash1.8.0
-  - setuptools65.6.3
-  - six1.16.0
-  - sniffio1.2.0
-  - soupsieve2.3.2.post1
-  - sqlite3.41.1
-  - stack_data0.2.0
-  - terminado0.17.1
-  - tinycss21.2.1
-  - tk8.6.12
-  - tornado6.2
-  - traitlets5.7.1
-  - typing-extensions4.4.0
-  - typing_extensions4.4.0
-  - tzdata2022g
-  - wcwidth0.2.5
-  - webencodings0.5.1
-  - websocket-client0.58.0
-  - wheel0.38.4
-  - xz5.2.10
-  - zeromq4.3.4
-  - zlib1.2.13
-  - zstd1.5.2
+  - anyio=3.5.0
+  - appnope=0.1.2
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - asttokens=2.0.5
+  - attrs=22.1.0
+  - backcall=0.2.0
+  - beautifulsoup4=4.11.1
+  - blas=1.0
+  - bleach=4.1.0
+  - bottleneck=1.3.5
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - bzip2=1.0.8
+  - ca-certificates=2023.01.10
+  - certifi=2022.12.7
+  - cffi=1.15.1
+  - comm=0.1.2
+  - contourpy=1.0.5
+  - cycler=0.11.0
+  - debugpy=1.5.1
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - entrypoints=0.4
+  - executing=0.8.3
+  - flit-core=3.8.0
+  - fonttools=4.25.0
+  - freetype=2.12.1
+  - giflib=5.2.1
+  - icu=68.1
+  - idna=3.4
+  - ipykernel=6.19.2
+  - ipython=8.10.0
+  - ipython_genutils=0.2.0
+  - jedi=0.18.1
+  - jinja2=3.1.2
+  - jpeg=9e
+  - jsonschema=4.17.3
+  - jupyter_client=7.4.9
+  - jupyter_core=5.3.0
+  - jupyter_server=1.23.4
+  - jupyterlab_pygments=0.1.2
+  - kiwisolver=1.4.4
+  - lcms2=2.12
+  - lerc=3.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcxx=14.0.6
+  - libdeflate=1.17
+  - libffi=3.4.2
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libiconv=1.16
+  - libopenblas=0.3.21
+  - libpng=1.6.39
+  - libsodium=1.0.18
+  - libtiff=4.5.0
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
+  - libxml2=2.10.3
+  - libxslt=1.1.37
+  - llvm-openmp=14.0.6
+  - lxml=4.9.2
+  - lz4-c=1.9.4
+  - markupsafe=2.1.1
+  - matplotlib=3.7.1
+  - matplotlib-base=3.7.1
+  - matplotlib-inline=0.1.6
+  - mistune=0.8.4
+  - munkres=1.1.4
+  - nbclassic=0.5.3
+  - nbclient=0.5.13
+  - nbconvert=6.5.4
+  - nbformat=5.7.0
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
+  - notebook=6.5.3
+  - notebook-shim=0.2.2
+  - numexpr=2.8.4
+  - numpy=1.23.5
+  - numpy-base=1.23.5
+  - openssl=1.1.1t
+  - packaging=23.0
+  - pandas=1.5.3
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=9.4.0
+  - pip=23.0.1
+  - platformdirs=2.5.2
+  - prometheus_client=0.14.1
+  - prompt-toolkit=3.0.36
+  - psutil=5.9.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pycparser=2.21
+  - pygments=2.11.2
+  - pyparsing=3.0.9
+  - pyrsistent=0.18.0
+  - python=3.10.10
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.2
+  - pytz=2022.7
+  - pyzmq=23.2.0
+  - readline=8.2
+  - send2trash=1.8.0
+  - setuptools=65.6.3
+  - six=1.16.0
+  - sniffio=1.2.0
+  - soupsieve=2.3.2.post1
+  - sqlite=3.41.1
+  - stack_data=0.2.0
+  - terminado=0.17.1
+  - tinycss2=1.2.1
+  - tk=8.6.12
+  - tornado=6.2
+  - traitlets=5.7.1
+  - typing-extensions=4.4.0
+  - typing_extensions=4.4.0
+  - tzdata=2022g
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - websocket-client=0.58.0
+  - wheel=0.38.4
+  - xz=5.2.10
+  - zeromq=4.3.4
+  - zlib=1.2.13
+  - zstd=1.5.2
   - pip:
       - nbstripout==0.6.1
